--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,11 +4,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
@@ -24,7 +19,7 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-Body {
+  padding-left: 10%;
+  padding-right: 10%;
 }
