--- a/src/css/Resume.css
+++ b/src/css/Resume.css
@@ -42,6 +42,14 @@
   padding-left: 10px;
 }
 
+.SkillHeading {
+  text-align: left;
+}
+
+.Skills {
+  text-align: left;
+}
+
 ul {
   list-style-type: none;
 }
