--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,7 @@
 @import '~antd/dist/antd.css';
 * {
   font-family: Helvetica !important;
+  color: #22262B;
 }
 .App {
   text-align: center;
@@ -14,7 +15,6 @@
   height: 150px;
   padding-top: 5px;
   padding-bottom: 20px;
-  color: #white;
 }
 
 .App-title {
